@@ -217,6 +217,7 @@ var ice_dictionary = {
 	"text_module_text" : "Text",
 	"text_module_gap_type" : "Gap type",
 	"text_module_gap_width" : "Gap width",
+	"text_module_gap_max_length" : "Gap max length",
 	"is_activity" : "Is&nbsp;activity",
 	"is_disabled" : "Is&nbsp;disabled",
 	"randomOrder" : "Random&nbsp;Order",
