@@ -1,3 +1,4 @@
+2014-08-21 Added Gap max length property in Text module
 2014-08-20 Added responding to Show Answers events in Text module
 2014-08-20 Added Styles property to Navigation Bar module
 2014-08-20 Added Random order property to Choice module
